[project]
name = "upskill-python2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "aroguska", email = "agnieszka.roguska@capgemini.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
upskill-python2 = "upskill_python2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
